# voice_rag

./: .env.example  .gitignore  CLAUDE.md  INFRASTRUCTURE_REPORT.md  USAGE.md  conftest.py  pyproject.toml  rag_utils.py  requirements.txt  run_experiment3.sh  server.py  start_web_server.sh
data/: company_graph.py  fictional_knowledge_base.py  knowledge_base.py  test_cases_exp2.py
docs/: 3. 实验1-模型对比设计.md  5. 实验3-长语音理解实验设计.md  EXPERIMENT2_1_COMPREHENSIVE_COMPARISON.md  EXPERIMENT2_SUMMARY.md  LOCAL_VLLM_GUIDE.md  experiment1_llm_scoring_analysis.md  近似匹配测试说明.md
experiments/: EXPERIMENT3_A100_DEPLOYMENT.md  EXPERIMENT3_README.md  EXPERIMENT3_SUMMARY.md  README_v3.md  analyze_exp3_results.py  analyze_exp3_v3_results.py  incremental_summarizer.py  incremental_summarizer_v2.py  long_audio_rag_pipeline.py  long_audio_simulator.py  long_audio_test_cases.json  test_01_model_comparison.py  test_01_sequential.py  test_02_final_improved.py  test_02_hybrid_rag.py  test_02_improved.py  test_03_long_audio_rag.py  test_03_simple.py  test_03_v2.py  test_03_v3.py  test_03_v3_server.py  workshop_optimization.py
notebooks/: workshop_demo.ipynb
outputs/: experiment1_report_20251220_114457.md  experiment1_report_20251220_125458.md  experiment1_report_20251220_125747.md  experiment1_report_20251220_130129.md  experiment1_report_20251220_130810.md  experiment1_results_20251213_200059.json  experiment1_results_20251220_114457.json  experiment1_results_20251220_125458.json  experiment1_results_20251220_125747.json  experiment1_results_20251220_130129.json  weekly_report_20251218.txt  (+17 more)
(+45 files in other folders)
